// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CopyButton rendering renders expected elements 1`] = `
<button
  aria-label="Copy"
  className="CopyButton"
  id="test-id"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  type="button"
>
  <SvgIcon
    icon={[Function]}
  />
</button>
`;

exports[`CopyButton rendering renders expected elements when disabled is true and className is not set 1`] = `
<span
  aria-disabled="true"
  aria-label="Copy"
  className="CopyButton"
  id="test-id"
  onMouseEnter={[Function]}
>
  <SvgIcon
    icon={[Function]}
  />
</span>
`;

exports[`CopyButton rendering renders expected elements when disabled is true and optional properties are set 1`] = `
<span
  aria-disabled="true"
  aria-label="Copy"
  className="CopyButton TestClass"
  id="test-id"
  onMouseEnter={[Function]}
>
  <SvgIcon
    icon={{}}
  />
</span>
`;

exports[`CopyButton rendering renders expected elements when optional properties are set 1`] = `
<button
  aria-label="Copy"
  className="CopyButton TestClass"
  id="test-id"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  type="button"
>
  <SvgIcon
    icon={{}}
  />
</button>
`;
